Removing foxtrot from search panels -- inprogress